P2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
      kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: app1.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80

  - host: app3.com
    http:
    paths:
    - path: /
      pathType: Prefix
      backend:
        service:
          name: app3-service
          port:
            number: 80

  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-service
            port:
              number: 80
